# strong-induction

./: .gitignore  Makefile  README.md  StrongInduction.opam  StrongInduction.v  _CoqProject  dune-project  package.json
esy.lock/: index.json
theories/: Inductions.v  StrongInduction.v  dune
